# najia

./: .drone.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements.dev  requirements.txt  sample.py  sample0.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: CHANGELOG.md  Makefile  conf.py  index.rst  installation.rst  make.bat  quick.md  setup.md  usage.rst
najia/: __init__.py  __main__.py  cli.py  const.py  najia.py  utils.py
najia/bazi/: BZBaseTools.py  BZPaipan.py  BzBaseClass.py  BzRules.py  StaticDict.py  Test.py
najia/data/: dc.json  dd.json  guaci.pkl  guaci.txt  simple.tpl  standard.tpl
tests/: __init__.py  test_compile.py  test_god6.py  test_gong.py  test_gua.py  test_guaci.py  test_gz5x.py  test_mark.py  test_najia.py  test_qin6.py  test_xkong.py
tests/data/: dc.json  guaci.txt
