[tool.poetry]
name = "najia"
version = "2.0.0"
description = ""
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
repository = "https://github.com/bopo/najia"
homepage = "https://github.com/bopo/najia"
license = "MIT"
packages = [
    { include = "najia" }
]


[tool.poetry.scripts]
najia = 'najia.__main__:main'


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
arrow = "^1.2.3"
jinja2 = "^3.1.2"
lunar-python = "^1.3.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.ustc.edu.cn/pypi/web/simple"
default = false
secondary = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:warnings"
log_cli = 0
log_cli_level = "DEBUG"


[tool.commitizen]
version = "2.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
annotated_tag = true
version_files = [
    "najia/__init__.py:__version__",
    "pyproject.toml:version",
]
