[tool.poetry]
name = "najia"
version = "2.0.1"
description = "基于 Python 编写的纳甲六爻排盘程序"
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
repository = "https://github.com/bopo/najia"
homepage = "https://github.com/bopo/najia"
license = "MIT"
packages = [
    { include = "najia" }
]


[tool.poetry.scripts]
najia = 'najia.__main__:main'


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
arrow = "^1.2.3"
jinja2 = "^3.1.2"
lunar-python = "^1.3.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:warnings"
log_cli = 0
log_cli_level = "DEBUG"


[tool.commitizen]
tag_format = "v$version"
annotated_tag = true
changelog_incremental = true
update_changelog_on_bump = true
version_provider = "poetry"
version_files = [
    "najia/__init__.py:__version__",
]

[tool.poe.tasks]
venv = "poetry install --sync"
lock = "poetry lock --no-update"
fake = "poetry run python manage.py runscript fake -v2"

lift = "ENV=prod honcho start"
up   = "poetry run python manage.py runserver 0.0.0.0:8000"

test = "poetry run pytest"
lint = "poetry run ruff check ./**/*.py --fix"

docs = "poetry run mkdocs serve -a 0.0.0.0:8000"
dist = "poetry build -v"

lang = "poetry run python manage.py compilemessages"
bump = "cz bump --yes -ch -cc --increment"
#{MAJOR,MINOR,PATCH}
